test/message/esm_display_syntax_error_import_json_named_export.out
file:///*/test/message/esm_display_syntax_error_import_json_named_export.mjs:*
import { ofLife } from '../fixtures/experimental.json' assert { type: 'json' };
         ^^^^^^
SyntaxError: The requested module '../fixtures/experimental.json' does not provide an export named 'ofLife'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:*:*)
    at async ModuleJob.run (node:internal/modules/esm/module_job:*:*)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:*:*)
    at async loadESM (node:internal/process/esm_loader:*:*)
    at async handleMainPromise (node:internal/modules/run_main:*:*)

Node.js *
