test/message/esm_display_syntax_error_import_json_named_export.mjs
// Flags: --experimental-json-modules --no-warnings
/* eslint-disable no-unused-vars */
import '../common/index.mjs';
import { ofLife } from '../fixtures/experimental.json' assert { type: 'json' };
